update index page title 2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#4a4a4a">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chelsea Morgan UX/UI Designer</title>
+    <title>Chelsea Morgan UX/UI Designer changed</title>
 </head>
 
 <body>
