--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#4a4a4a">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>About Chelsea Morgan</title>
 </head>
 
 <body>
