Add links to project pages

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         from anywhere to offer trustworthy advice and real-time insights. This project showcases my UX design
                         process from start to finish all the way from initial research, through wireframing, testing, and ending
                         with the final prototype.</p>
-                    <a href="#">Read more</a>
+                    <a href="mentr.html">Read more</a>
                 </div><!--end second column-->
             </div><!--end row that holds (2) columns for project-->
             <!--end first project-->
@@ -67,7 +67,7 @@
                 <div><!--open second column (used for text)-->
                     <h3>Flame</h3>
                     <p>Flame is a responsive web-app for users of any ability or experience level looking to get into an exercise routine that fits with their current schedule. This project more heavily focuses on the visual design of the product in order to demonstrate my UI design skills and process, all through the wider lens of a UX background.</p>
-                    <a href="#">Read more</a>
+                    <a href="flame.html">Read more</a>
                 </div><!--end second column-->
             </div><!--end row that holds (2) columns for project-->
             <!--end second project-->
