--- a/flame.html
+++ b/flame.html
@@ -26,6 +26,305 @@
         </div>
     </header>
     <main>
+        <div> <!--open all project content-->
+
+            <div> <!--open project header-->
+                <h1>Flame Case Study</h1>
+            </div> <!--end project header-->
+            <div> <!--open project overview section-->
+                <h3>Project Overview</h3>
+                <p> For my UI specialization course through CareerFoundry, I designed a responsive web fitness app, Flame.</p>
+            </div> <!--end project overview section-->
+
+            <div> <!--open row for 2 columns-->
+                <div> <!--open column 1 for text-->
+                    <h3>Context</h3>
+                    <p>Getting into an exercise routine can be daunting for many people, especially those of us who have no working knowledge of gym equipment or limited fitness know-how. Additionally, finding routines that fit into our jam-packed schedules is tough. Therefore, the goal of Flame is to motivate people of all experience levels to get into a fitness routine customized to their schedule, skills, and interests.</p>
+                </div> <!--end column 1 for text-->
+                <div> <!--open column 2 for img-->
+                    <picture>
+                        <source srcset="img/flame/flame_logo@1x.png" media="(max-width:767px)">
+                        <img src="img/flame/flame_logo@2x.png" alt="Flame logo">
+                    </picture>
+                </div> <!--end column 2 for img-->
+            </div> <!--end row 2 columns-->
+
+            <div> <!--open project specs section-->
+                <div>
+                    <h3>My Role</h3>
+                    <ul>
+                        <li>UI Designer</li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h3>Timeline</h3>
+                    <ul>
+                        <li>8 weeks</li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h3>Tools</h3>
+                    <ul>
+                        <li>Figma</li>
+                        <li>Balsamiq</li>
+                    </ul>
+                </div>
+            </div> <!--end project specs section-->
+
+            <div> <!--open design process section-->
+                <div>
+                    <h3>The Design Process</h3>
+                </div>
+
+                <div>
+                    <ol>
+                        <li>Define</li>
+                        <li>Empathize</li>
+                        <li>Ideate</li>
+                        <li>Design</li>
+                        <li>Prototype</li>
+                    </ol>
+                </div>
+            </div> <!--end design process section-->
+
+            <div>
+                <h1>Define</h1>
+            </div>
+
+            <div> <!--open define section-->
+                <div>
+                    <p>To begin, I would need to start with the 5 W-questions to define the scope of the project:</p>
+                </div>
+
+                <div>
+                    <picture>
+                        <source srcset="img/flame/w_questions@1x.png" media="(max-width:767px)">
+                        <img src="img/flame/w_questions@2x.png" alt=" 5 W questions and answers as follows: Who? people who are new or just returning to fitness, want to find activities they like, and want to get into a good routine. What? A responsive web app where users can search and view routines, exercise guides, challenges, and other relevant info from any device, with the option to add workout sessions to their personal calendar from the app. When? Users can use the app whenever works for their schedule. They will use the app when searching for, scheduling, and actively following workouts. Where? Since the goal of the app is to get users into a routine that fits their schedule, users can use the app from wherever they would like. Why? To improve health and overall confidence without having to sacrifice valuable time.">
+                    </picture>
+                </div>
+            </div> <!--end define section-->
+
+            <div>
+                <h1>Empathize</h1>
+            </div>
+
+            <div> <!--open empathize section-->
+                <div>
+                    <h2>Who is the User?</h2>
+                    <p>The project brief provided the following proto-persona and user stories, which helped me to better understand my target audience and their needs, motivations, and pain points, which, as I knew from the wider UX lens, would help to inform my design.</p>
+                </div>
+
+                <div>
+                    <picture>
+                        <source srcset="img/flame/flame_persona@1x.png" media="(max-width:767px)">
+                        <img src="img/flame/flame_persona@2x.png" alt="Flame proto-persona, Rebecca.">
+                    </picture>
+                </div>
+
+                <div>
+                    <picture>
+                        <source srcset="img/flame/flame_user_stories@1x.png" media="(max-width:767px)">
+                        <img src="img/flame/flame_user_stories@2x.png" alt="User stories, as follows: As a new user, I want to learn about different exercises, so that I can figure out what is best for me. As a new user, I want to be shown how the exercises are done, so that I know I am doing them correctly.
+                        As a frequent user, I want to be able to schedule exercises for working out, so that I build positive habits. As a frequent user, I want to be able to earn achievements or rewards, so that I can stay motivated. As a frequent user, I want to complete daily challenges, so that I can have an additional way to stay motivated. As a frequent user, I want to track progression and record what I have done, so that I can see my progress over time. As a frequent user, I want to be able to share routines with my friends who may also be interested, so that I can encourage them to become healthier.">
+                    </picture>
+                </div>
+            </div> <!--end empathize section-->
+
+            <div>
+                <h1>Ideate</h1>
+            </div>
+
+            <div> <!--open ideate section-->
+                <div>
+                    <p>Given the essential features and the above user stories provided by the project brief, I created a user flow diagram to better visualize the screens that would be needed within the app in order to help users achieve their goals.</p>
+                </div>
+
+                <div>
+                    <picture>
+                        <source srcset="img/flame/all_flows@1x.png" media="(max-width:767px)">
+                        <img src="img/flame/all_flows@2x.png" alt="flow chart showing all user flows.">
+                    </picture>
+                </div>
+            </div> <!--end ideate section-->
+
+            <div>
+                <h1>Design</h1>
+            </div>
+
+            <div> <!--open design section-->
+                <div>
+                    <h2>Low-Fidelity</h2>
+                    <p>Next, I used Balsamiq to create low-fidelity wireframes and prototypes to quickly map out the main functions of the app. I designed with a mobile-first approach, expanding to larger breakpoints once I had established my basic mobile designs.</p>
+                </div>
+
+                <div>
+                    <h3>Mobile Wireframes</h3>
+                </div>
+
+                <div>
+                    <picture>
+                        <source srcset="img/flame/lofi_mobile@1x.png" media="(max-width:767px)">
+                        <img src="img/flame/lofi_mobile@2x.png" alt="Low-fidelity mobile wireframes made in Balsamiq.">
+                    </picture>
+                </div>
+
+                <div>
+                    <h3>Expanding to Larger Breakpoints</h3>
+                </div>
+
+                <div>
+                    <picture>
+                        <source srcset="img/flame/lofi_allbreakpoints@1x.png" media="(max-width:767px)">
+                        <img src="img/flame/lofi_allbreakpoints@2x.png" alt="Low-fidelity wireframes of the home screen for mobile, tablet, and desktop breakpoints, shown left to right.">
+                    </picture>
+                </div>
+
+                <div>
+                    <h2>Mid-Fidelity</h2>
+                    <p>It was time to start translating my low-fidelity designs into mid-fidelity wireframes in order to btegin breathing some life into the app. At this point, I established my typographic styles, added some basic UI elements to my screens, and used common UI design patterns to inform the overall form and function of the app.</p>
+                </div>
+
+                <div>
+                    <picture>
+                        <source srcset="img/flame/midfi_mobile@1x.png" media="(max-width:767px)">
+                        <img src="img/flame/midfi_mobile@2x.png" alt="mid-fidelity wireframes showing 3 features: start exercise from the exercise info screen, rearrange order of exercises on the auto generate workout preview screen, and rearrange order of exercises on the build your own workout preview.">
+                    </picture>
+                </div>
+
+                <div>
+                    <picture>
+                        <source srcset="img/flame/midfi_home_all_breakpoints@1x.png" media="(max-width:767px)">
+                        <img src="img/flame/midfi_home_all_breakpoints@2x.png" alt="mid-fidelity wireframes of the home scren at mobile, tablet, and desktop breakpoints from left to right.">
+                    </picture>
+                </div>
+
+                <div>
+                    <h2>High-Fidelity</h2>
+                    <p>Now it was time to move on to the high-fidelity phase and truly bring my designs to life! The journey to high-fidelity would involve creating a mood board, refining my design elements, and establishing a style guide in order to create an engaging visual design that would showcase and further enhance the app's brand identity.</p>
+                </div>
+
+                <div>
+                    <h3>Mood Board</h3>
+                    <p>In order to set the tone and overall aesthetic of the app, I gathered my ideas visually with a mood board.</p>
+                </div>
+
+                <div>
+                    <picture>
+                        <source srcset="img/flame/mood_board@1x.jpg" media="(max-width:767px)">
+                        <img src="img/flame/mood_board@2x.jpg" alt="Flame moodboard, with 3 descriptive words reading: motivational, energetic, and approachable. Emphasizing orange and yellow as bright, primary accent colors with dark blues/navies and grays as secondary colors">
+                    </picture>
+                </div>
+
+                <div>
+                    <h3>Style Guide</h3>
+                    <p>I then created a visual style guide to establish consistency in my design from screen to screen, further strengthening the app's brand and overall look and feel.</p>
+                </div>
+
+                <div>
+                    <picture>
+                        <source srcset="img/flame/style_guide_preview@1x.png" media="(max-width:767px)">
+                        <img src="img/flame/style_guide_preview@2x.png" alt="Preview of style guide, showing color palette, typography, and iconography">
+                    </picture>
+                </div>
+
+                <div>
+                    <p>Click <a href="files/flame_style_guide.pdf" target="_blank">here</a> to view the full style guide!</p>
+                </div>
+
+                <div>
+                    <h2>The Outcome</h2>
+                </div>
+
+                <div>
+                    <picture>
+                        <source srcset="img/flame/mockup_allbreakpoints@1x.jpg" media="(max-width:767px)">
+                        <img src="img/flame/mockup_allbreakpoints@2x.jpg" alt="Presentation mockup photo showing home screen of flame on desktop, tablet, and mobile devices.">
+                    </picture>  
+                </div>
+
+                <div>
+                    <picture>
+                        <source srcset="img/flame/mockup_desktop@1x.jpg" media="(max-width:767px)">
+                        <img src="img/flame/mockup_desktop@2x.jpg" alt="Presentation mockup photo showing woman looking at laptop showing the progress log screen.">
+                    </picture>  
+                </div>
+
+                <div>
+                    <picture>
+                        <source srcset="img/flame/mockup_tablet@1x.jpg" media="(max-width:767px)">
+                        <img src="img/flame/mockup_tablet@2x.jpg" alt="Mockup of a tablet on a table next to yellow headphones and a glass of water showing the explore exercises screen.">
+                    </picture>  
+                </div>
+
+                <div>
+                    <picture>
+                        <source srcset="img/flame/mobile_mockup@1x.jpg" media="(max-width:767px)">
+                        <img src="img/flame/mobile_mockup@2x.jpg" alt="Mockup showing someone holding a phone showing the exercise info screen for the russian twists exercise.">
+                    </picture>  
+                </div>
+
+                <div>
+                    <picture>
+                        <source srcset="img/flame/mockup_desktop_and_mobile@1x.jpg" media="(max-width:767px)">
+                        <img src="img/flame/mockup_desktop_and_mobile@2x.jpg" alt="Mockup showing smiling person at their laptop with a phone in their hand. The laptop shows the explore exercise screen while the phone shows the progress log.">
+                    </picture>  
+                </div>
+            </div> <!--end design section-->
+
+            <div>
+                <h1>Prototype</h1>
+            </div>
+
+            <div> <!--open prototype section-->
+                <div>
+                    <h2>Flame Interface in Action</h2>
+                    <p>Check out the brief video demo videos below to see Flame in action!</p>
+                </div>
+
+                <div>
+                    <video width="640px" height="360px" controls>
+                        <source src="img/flame/BYO workout.mov" type="video/mp4">
+                   </video>
+                </div>
+
+                <div>
+                    <video width="640px" height="360px" controls>
+                        <source src="img/flame/Log in + explore exercises.mov" type="video/mp4">
+                   </video>
+                </div>
+
+                <div>
+                    <p>Click <a href="https://www.figma.com/proto/ola1fBvwMqUKbbLb9NMMcQ/Flame-(Fitted)-Workspace?page-id=7%3A2072&type=design&node-id=35-3644&viewport=890%2C436%2C0.07&t=O5ua9opFNov9c72J-1&scaling=scale-down&starting-point-node-id=35%3A3644&mode=design" target="_blank">here</a> to try the prototype for yourself!</p>
+                </div>
+            </div> <!--end prototype section-->
+
+            <div> <!--open learnings and future directions section-->
+                <div>
+                    <h2>Learnings &amp; Future Directions</h2>
+                    <p>Crafting Flame's UI from scratch for this course project has been an incredibly valuable and enriching experience for me, not to mention a lot of fun! As I navigated the delicate balance between visual aesthetics and functionality, I learned how clear communication and engaging visuals come together to shape the overall user experience of a product.</p>
+                    <p>While my knowledge of UX design certainly informed the creation of Flame, given the project's primary focus on UI development, there's an opportunity to more deeply analyze Flame from a UX perspective in the future.</p>
+                    <p>Specifically, I'd like to conduct user testing with Flame to validate the designs and overall concept at the current stage of development. This step will help provide valuable insights, ensuring that the UX and UI work together to create a smooth, satisfying, and widely accessible experience for all users.</p>
+                </div>
+
+                <div>
+                    <h3>Next Steps</h3>
+                </div>
+
+                <div>
+                    <ol>
+                        <li>Conduct first round of usability testing to validate current designs and identify any areas of improvement.</li>
+                        <li>Iterate on designs based on user feedback.</li>
+                        <li>Match &amp; expand functionality on both Tablet and Desktop breakpoints.</li>
+                    </ol>
+                </div>
+            </div> <!--end learnings and future directions section-->
+
+            <div>
+                <h2>Thank you for reading my case study!</h2>
+            </div>
+        </div> <!--end all project content-->
 
     </main>
         
