Update mentr design system format

--- a/mentr.html
+++ b/mentr.html
@@ -73,14 +73,14 @@
                 </div>
 
                 <div>
-                <ol>
-                    <li>Understand &amp; Define</li>
-                    <li>Empathize</li>
-                    <li>Ideate</li>
-                    <li>Prototype</li>
-                    <li>Test</li>
-                    <li>Refine</li>
-                </ol>
+                    <ol>
+                        <li>Understand &amp; Define</li>
+                        <li>Empathize</li>
+                        <li>Ideate</li>
+                        <li>Prototype</li>
+                        <li>Test</li>
+                        <li>Refine</li>
+                        </ol>
                 </div>
             </div> <!--end design process section-->
 
@@ -481,7 +481,7 @@
                 </div>
 
                 <div>
-                    <p>Check out the full design system <a href="https://drive.google.com/file/d/1wqMXnJWxgCNzDKlEFJJb4-8LvzVi6Y9v/view?usp=sharing" target="_blank">here</a> for a better look</p>
+                    <p>Check out the full design system <a href="files/mentr_design_lang_system.pdf" target="_blank">here</a> for a better look</p>
                 </div>
 
                 <div> <!--open high fidelity and collab section-->
