--- a/flame.html
+++ b/flame.html
@@ -9,7 +9,9 @@
     <meta name="theme-color" content="#4a4a4a">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chelsea Morgan UX/UI Designer</title>
+    <title>Flame Case Study</title>
+
+    <link rel="stylesheet" type="text/css"  href="css/style.css">
 </head>
 
 <body>
