Revert "Update mentr title"
This reverts commit 336e694a370f0d15a3c41faf5736784f55163970.

--- a/mentr.html
+++ b/mentr.html
@@ -9,9 +9,7 @@
     <meta name="theme-color" content="#4a4a4a">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mentr Case Study</title>
-
-    <link rel="stylesheet" type="text/css"  href="css/style.css">
+    <title>Chelsea Morgan UX/UI Designer</title>
 </head>
 
 <body>
