Update order of head sections

--- a/about.html
+++ b/about.html
@@ -2,15 +2,23 @@
 <html lang="en" dir="ltr">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#4a4a4a">
+
+    <title>About Chelsea Morgan</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&family=Open+Sans:wght@300;400;500&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" type="text/css"  href="css/styles.css">
+
     <link rel="icon" href="img/favicon/favicon.ico" sizes="any">
     <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
     <link rel="manifest" href="img/favicon/site.webmanifest">
-    <meta name="theme-color" content="#4a4a4a">
-    <meta name="theme-color" content="#4a4a4a">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Chelsea Morgan</title>
 </head>
 
 <body>
@@ -48,7 +56,7 @@
                             design can have on real-world outcomes. Now after transitioning into the field of UX design,
                             I'm using my unique background to merge human-centered principles, functionality, and
                             aesthetics to create accessible and inclusive digital solutions that just work.</p>
-                            <a href="files/cmorgan_cv2023.pdf" target="_blank">Download my resume</a>
+                            <a href="files/cmorgan_cv2023.pdf" target="_blank" class="button">Download my resume</a>
                     </div> <!--end column 1-->
                     <div> <!--open column 2-->
                         <h2>Skills &amp; Tools</h2>
