--- a/index.html
+++ b/index.html
@@ -2,14 +2,23 @@
 <html lang="en" dir="ltr">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#4a4a4a">
+
+    <title>Chelsea Morgan UX/UI Designer</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&family=Open+Sans:wght@300;400;500&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" type="text/css"  href="css/styles.css">
+
     <link rel="icon" href="img/favicon/favicon.ico" sizes="any">
     <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
     <link rel="manifest" href="img/favicon/site.webmanifest">
-    <meta name="theme-color" content="#4a4a4a">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chelsea Morgan UX/UI Designer</title>
 </head>
 
 <body>
@@ -26,7 +35,7 @@
         </div>
     </header>
     <main>
-        <div><!--open hero section-->
+        <div id="hero"><!--open hero section-->
             <div>
                 <h1>Hi, I'm Chelsea!
                     <span>I'm a UX/UI Designer based in NYC.</span>
@@ -36,7 +45,7 @@
             </div>
         </div><!--end hero section-->
 
-        <div><!--open work section-->
+        <div id="work"><!--open work section-->
             <h2>My Work</h2>
             <!--start first project-->
             <div><!--open row that holds (2) columns for project-->
@@ -52,7 +61,7 @@
                         from anywhere to offer trustworthy advice and real-time insights. This project showcases my UX design
                         process from start to finish all the way from initial research, through wireframing, testing, and ending
                         with the final prototype.</p>
-                    <a href="mentr.html">Read more</a>
+                    <a href="mentr.html" class="button">Read more</a>
                 </div><!--end second column-->
             </div><!--end row that holds (2) columns for project-->
             <!--end first project-->
@@ -67,7 +76,7 @@
                 <div><!--open second column (used for text)-->
                     <h3>Flame</h3>
                     <p>Flame is a responsive web-app for users of any ability or experience level looking to get into an exercise routine that fits with their current schedule. This project more heavily focuses on the visual design of the product in order to demonstrate my UI design skills and process, all through the wider lens of a UX background.</p>
-                    <a href="flame.html">Read more</a>
+                    <a href="flame.html" class="button">Read more</a>
                 </div><!--end second column-->
             </div><!--end row that holds (2) columns for project-->
             <!--end second project-->
@@ -80,12 +89,12 @@
                 <p>Phone: <a href="tel:+9089306255">(908) 930-6255</a></p>
                 <p>Prefer Email?</p>
                 <div><!--open email link-->
-                    <a href="mailto:chelsea.morgan704@gmail.com">Email me</a>
+                    <a href="mailto:chelsea.morgan704@gmail.com" class="button contact">Email me</a>
                 </div><!--end email link-->
                 <div>
                     <!--social media layout and placeholders-->
                     <a href="https://www.linkedin.com/in/chelsea-rabinowitz-b06579100" target="_blank">
-                        <img src="img/linkedin.svg">
+                        <img src="img/linkedin.svg" alt="Linkedin logo linking to Linkedin profile">
                     </a>
                 </div>
                 <p>Copyright Chelsea Morgan 2023</p>
