Update alt text for linkedin logo

--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
                 <div>
                     <!--social media layout and placeholders-->
                     <a href="https://www.linkedin.com/in/chelsea-rabinowitz-b06579100" target="_blank">
-                        <img src="img/linkedin.svg" alt="Linkedin Logo">
+                        <img src="img/linkedin.svg" alt="Linkedin logo linking to Linkedin profile">
                     </a>
                 </div>
                 <p>Copyright Chelsea Morgan 2023</p>
