--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <link rel="manifest" href="img/favicon/site.webmanifest">
 </head>
 
-<body>
-    <header>
-        <div>
-            <img src="img/logov1.svg" alt="Logo">
+<body class="index">
+    <header class="index">
+        <div class="container">
+            <img src="img/logov1.svg" alt="Logo" class="logo">
             <nav>
-                <ul>
+                <ul class="navigation">
                     <li><a href="index.html">Work</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -35,45 +35,45 @@
         </div>
     </header>
     <main>
-        <div id="hero"><!--open hero section-->
-            <div>
+        <div id="hero"> <!--open hero section-->
+            <div class="container">
                 <h1>Hi, I'm Chelsea!
                     <span>I'm a UX/UI Designer based in NYC.</span>
                 </h1>
                 <p>With a prior career in Speech Pathology and a personal background in art and visual design, I aim to
                     craft functional, creative, and user-centered digital solutions to everyday problems.</p>
             </div>
-        </div><!--end hero section-->
+        </div> <!-- end hero section-->
 
-        <div id="work"><!--open work section-->
+        <div id="work" class="container"> <!--open work section-->
             <h2>My Work</h2>
             <!--start first project-->
-            <div><!--open row that holds (2) columns for project-->
-                <div><!--open first column (used for image)-->
+            <div class="row"> <!--open row that holds (2) columns for project-->
+                <div> <!--open first column (used for image)-->
                     <picture>
                         <source srcset="img/mentr/mentr_hero@1x.jpg" media="(max-width:767px)">
                         <img src="img/mentr/mentr_hero@2x.jpg" alt="Mentr hero image">
                     </picture>
-                </div><!--end first column-->
-                <div><!--open second column (used for text)-->
+                </div> <!--end first column-->
+                <div> <!--open second column (used for text)-->
                     <h3>Mentr</h3>
                     <p>Mentr is a responsive web-app that connects users with trusted experts across any field, at any time,
                         from anywhere to offer trustworthy advice and real-time insights. This project showcases my UX design
                         process from start to finish all the way from initial research, through wireframing, testing, and ending
                         with the final prototype.</p>
                     <a href="mentr.html" class="button">Read more</a>
-                </div><!--end second column-->
-            </div><!--end row that holds (2) columns for project-->
+                </div> <!--end second column-->
+            </div> <!--end row that holds (2) columns for project-->
             <!--end first project-->
             <!--start second project-->
-            <div><!--open row that holds (2) columns for project-->
-                <div><!--open first column (used for image)-->
+            <div class="row"> <!--open row that holds (2) columns for project-->
+                <div> <!--open first column (used for image)-->
                     <picture>
                         <source srcset="img/flame/flame_hero@1x.jpg" media="(max-width:767px)">
                         <img src="img/flame/flame_hero@2x.jpg" alt="Flame hero image">
                     </picture>
-                </div><!--end first column-->
-                <div><!--open second column (used for text)-->
+                </div ><!--end first column-->
+                <div> <!--open second column (used for text)-->
                     <h3>Flame</h3>
                     <p>Flame is a responsive web-app for users of any ability or experience level looking to get into an exercise routine that fits with their current schedule. This project more heavily focuses on the visual design of the product in order to demonstrate my UI design skills and process, all through the wider lens of a UX background.</p>
                     <a href="flame.html" class="button">Read more</a>
@@ -83,7 +83,7 @@
         </div><!--end work section-->
 
         <footer id="contact">
-            <div>
+            <div class="container">
                 <h2>Contact</h2>
                 <p>Want to discuss collaborations or opportunities? Get in touch!</p> 
                 <p>Phone: <a href="tel:+9089306255">(908) 930-6255</a></p>
@@ -94,7 +94,7 @@
                 <div>
                     <!--social media layout and placeholders-->
                     <a href="https://www.linkedin.com/in/chelsea-rabinowitz-b06579100" target="_blank">
-                        <img src="img/linkedin.svg" alt="Linkedin logo linking to Linkedin profile">
+                        <img src="img/linkedin.svg" alt="Linkedin logo linking to Linkedin profile" class="social">
                     </a>
                 </div>
                 <p>Copyright Chelsea Morgan 2023</p>
