--- a/mentr.html
+++ b/mentr.html
@@ -24,7 +24,7 @@
 <body>
     <header>
         <div>
-            <img src="img/logov1.svg" alt="Logo">
+            <img src="img/logov1.svg" alt="Logo" class="logo">
             <nav>
                 <ul>
                     <li><a href="index.html">Work</a></li>
@@ -35,10 +35,10 @@
         </div>
     </header>
     <main>
-        <div> <!--open all project content-->
+        <div class="container"> <!--open all project content-->
 
             <div> <!--open project header-->
-                <h1>Mentr Case Study</h1>
+                <h1 class="center">Mentr Case Study</h1>
             </div> <!--end project header-->
             <div> <!--open project overview section-->
                 <h3>Project Overview</h3>
@@ -93,7 +93,7 @@
                 </div>
             </div> <!--end design process section-->
 
-            <div>
+            <div class="heading">
                 <h1>Understand &amp; Define</h1>
             </div>
 
@@ -235,9 +235,10 @@
                 </div> <!--end analyzing data section-->
             </div> <!--end user research section-->
 
-            <div>
+            <div class="heading">
                 <h1>Empathizing with the User</h1>
             </div> 
+            
 
             <div> <!--open empathizing content section-->
                 <div> <!--open user persona text section-->
@@ -254,7 +255,7 @@
                 </div> <!--end user persona img container-->
             </div> <!--end empathizing content section-->
 
-            <div>
+            <div class="heading">
                 <h1>Ideation</h1>
             </div> 
 
@@ -331,7 +332,7 @@
                 </div> <!--end revised sitemap img container-->
             </div> <!--end ideation content section-->
 
-            <div>
+            <div class="heading">
                 <h1>Wireframing &amp; Prototyping</h1>
             </div> 
 
@@ -446,7 +447,7 @@
                 </div> <!--close findings/solutions sections-->
             </div> <!--end testing and iterating section-->
 
-            <div>
+            <div class="heading">
                 <h1>UI &amp; Visual Design</h1>
             </div> 
 
