--- a/flame.html
+++ b/flame.html
@@ -24,7 +24,7 @@
 <body>
     <header>
         <div>
-            <img src="img/logov1.svg" alt="Logo">
+            <img src="img/logov1.svg" alt="Logo" class="logo">
             <nav>
                 <ul>
                     <li><a href="index.html">Work</a></li>
@@ -35,10 +35,10 @@
         </div>
     </header>
     <main>
-        <div> <!--open all project content-->
+        <div class="container"> <!--open all project content-->
 
             <div> <!--open project header-->
-                <h1>Flame Case Study</h1>
+                <h1 class="center">Flame Case Study</h1>
             </div> <!--end project header-->
             <div> <!--open project overview section-->
                 <h3>Project Overview</h3>
@@ -98,7 +98,7 @@
                 </div>
             </div> <!--end design process section-->
 
-            <div>
+            <div class="heading">
                 <h1>Define</h1>
             </div>
 
@@ -115,7 +115,7 @@
                 </div>
             </div> <!--end define section-->
 
-            <div>
+            <div class="heading">
                 <h1>Empathize</h1>
             </div>
 
@@ -141,7 +141,7 @@
                 </div>
             </div> <!--end empathize section-->
 
-            <div>
+            <div class="heading">
                 <h1>Ideate</h1>
             </div>
 
@@ -158,7 +158,7 @@
                 </div>
             </div> <!--end ideate section-->
 
-            <div>
+            <div class="heading">
                 <h1>Design</h1>
             </div>
 
@@ -282,7 +282,7 @@
                 </div>
             </div> <!--end design section-->
 
-            <div>
+            <div class="heading">
                 <h1>Prototype</h1>
             </div>
 
