--- a/flame.html
+++ b/flame.html
@@ -21,7 +21,7 @@
     <link rel="manifest" href="img/favicon/site.webmanifest">
 </head>
 
-<body>
+<body id="flame">
     <header>
         <div>
             <img src="img/logov1.svg" alt="Logo" class="logo">
