--- a/mentr.html
+++ b/mentr.html
@@ -21,7 +21,7 @@
     <link rel="manifest" href="img/favicon/site.webmanifest">
 </head>
 
-<body>
+<body class="mentr">
     <header>
         <div>
             <img src="img/logov1.svg" alt="Logo" class="logo">
