--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&family=Open+Sans:wght@300;400;500&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" type="text/css"  href="css/styles.css">
 
     <link rel="icon" href="img/favicon/favicon.ico" sizes="any">
@@ -48,7 +48,7 @@
                     </picture>
                 </div> <!--end picture container-->
                     <div class="row"> <!--open row for columns-->
-                        <div class="col-lg-7"> <!--open column 1-->
+                        <div> <!--open column 1-->
                             <h2 class="center">My Story</h2>
                             <p>I'm Chelsea! I'm a UX/UI designer based out of NYC aiming to craft solutions to make the
                                 digital world a more inclusive and user-friendly place. My journey into UX design was a bit
@@ -58,14 +58,14 @@
                                 design can have on real-world outcomes. Now after transitioning into the field of UX design,
                                 I'm using my unique background to merge human-centered principles, functionality, and
                                 aesthetics to create accessible and inclusive digital solutions that just work.</p>
-                            <div class="cv-button">
-                                <a href="files/cmorgan_cv2023.pdf" target="_blank" class="button">Download my resume</a>
+                            <div class="center">
+                                <a href="files/cmorgan_cv2023.pdf" target="_blank" class="button resume">Download my resume</a>
                             </div>
                         </div> <!--end column 1-->
-                        <div class="col-lg-5"> <!--open column 2-->
+                        <div> <!--open column 2-->
                             <h2 class="center">Skills &amp; Tools</h2>
                             <div class="skills"> <!--open skills&tools container-->
-                                <div class="col-md-6"> <!--open relevant skills list-->
+                                <div class="relev-skills"> <!--open relevant skills list-->
                                     <h3>Relevant Skills</h3>
                                     <ul>
                                         <li>Communication</li>
@@ -81,7 +81,7 @@
                                         <li>Frontend</li>
                                     </ul>
                                 </div> <!--end relevant skills list-->
-                                <div class="col-md-6"> <!--open tools list-->
+                                <div class="tools"> <!--open tools list-->
                                     <h3>Tools I Use</h3>
                                     <ul>
                                         <li>Figma</li>
